Adjusted our TODO

--- a/src/TODO
+++ b/src/TODO
@@ -1,5 +1,2 @@
-iroffset:
-Berechne offsets von array variablen
-
-asmgen:
-Beachte beim stackframe berechnen arrays
+- Argument 'keep' implementieren
+- Code aufräumen
